--- a/pages/home.html
+++ b/pages/home.html
@@ -73,7 +73,7 @@
                     <option>Select Category</option>
                 </select>
                 <div class="divider last"></div>
-                <button class="search-btn"><i class="fas fa-search"></i> Search Job</button>
+                <button href="jobs.html" class="search-btn"><i class="fas fa-search"></i> Search Job</button>
             </div>
 
             <!-- Estadísticas -->
@@ -124,7 +124,7 @@
             <h2>Recent Jobs Available</h2>
             <div class="header">
                 <p>At eu lobortis pretium tristique amet lacus ut aenean aliquet...</p>
-                <a href="#" class="view-all view-all-up">View all</a>
+                <a href="jobs.html" class="view-all view-all-up">View all</a>
             </div>
 
             <div class="job-list">
@@ -244,11 +244,11 @@
     </section>
 
 
-    <!-- Sección de Categorias -->
+    <!-- Sección de Categorías -->
     <section id="categorie" class="categories">
         <div class="categories-header">
             <h2>Browse by Category</h2>
-            <p>At eu lobortis pretium tincidunt amet lacus ut aenean aliquet. Blandit a massa elementum id scel...</p>
+            <p>Explore job opportunities across various categories. Find the perfect job that matches your skills and interests.</p>
         </div>
         <div class="categories-grid">
             <div class="category-card">
@@ -268,7 +268,7 @@
             </div>
             <div class="category-card">
                 <i class="fa-solid fa-code categories-icon"></i>
-                <h3>Programing</h3>
+                <h3>Programming</h3>
                 <span class="jobs-count">1520 jobs</span>
             </div>
             <div class="category-card">
@@ -300,9 +300,7 @@
             <div class="info-image"></div>
             <div class="info-text">
                 <h2>Good Life Begins With<br>A Good Company</h2>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsa, illum debitis eos magni quia cum qui
-                    autem tempore molestiae atque amet veritatis, dolorum hic incidunt, ad nesciunt asperiores! Maxime,
-                    eos.</p>
+                <p>Discover the benefits of working with top companies. Our platform connects you with employers who value your skills and experience.</p>
                 <div class="info-buttons">
                     <button class="btn-info primary">Search Job</button>
                     <button id="learn-more" class="btn-info secondary">Learn more</button>
@@ -313,23 +311,23 @@
             <div class="stat-info">
                 <h3>12k+</h3>
                 <p class="subtitle">Clients worldwide</p>
-                <p>At eu lobortis pretium tincidunt amet lacus ut aenean aliquet...</p>
+                <p>We have a global network of clients looking for talented individuals like you.</p>
             </div>
             <div class="stat-info">
                 <h3>20k+</h3>
-                <p class="subtitle">Active resume</p>
-                <p>At eu lobortis pretium tincidunt amet lacus ut aenean aliquet...</p>
+                <p class="subtitle">Active resumes</p>
+                <p>Join thousands of job seekers who have found their dream jobs through our platform.</p>
             </div>
             <div class="stat-info">
                 <h3>18k+</h3>
                 <p class="subtitle">Companies</p>
-                <p>At eu lobortis pretium tincidunt amet lacus ut aenean aliquet...</p>
+                <p>Partner with leading companies across various industries and take your career to the next level.</p>
             </div>
         </div>
         <div class="cta-banner">
             <div class="cta-text">
                 <h2>Create A Better Future For Yourself</h2>
-                <p>At eu lobortis pretium tincidunt amet lacus ut aenean aliquet...</p>
+                <p>Take the first step towards a brighter future. Explore job opportunities and find the perfect match for your skills and aspirations.</p>
                 <button class="btn-info primary">Search Job</button>
             </div>
         </div>
@@ -340,7 +338,7 @@
         <div class="container-testimonials">
             <h2 class="title-testimonial">Testimonials from Our Customers</h2>
             <p class="subtitle-testimonials">
-                At eu lobortis pretium tincidunt amet lacus ut aenean aliquet. Blandit a massa elementum id...
+                Hear what our satisfied clients have to say about their experiences with our job portal.
             </p>
 
             <div class="testimonials-grid">
@@ -354,11 +352,10 @@
                     </div>
                     <h3 class="testimonial-title">Amazing services</h3>
                     <p class="testimonial-text">
-                        Metus faucibus sed turpis lectus feugiat tincidunt. Rhoncus sed tristique in dolor. Mus etiam et
-                        vestibulum venenatis.
+                        The platform is user-friendly and helped me find my dream job quickly. The support team was always there to assist me.
                     </p>
                     <div class="testimonial-footer">
-                        <img src="../img/young-bearded-man-with-striped-shirt.jpg" alt="Marco Kihn" class="avatar" loading="lazy">
+                        <img src="../img/young-bearded-man-with-striped-shirt.jpg" alt="Marco Kihn" class="avatar">
                         <div>
                             <p class="name">Marco Kihn</p>
                             <p class="role">Happy Client</p>
@@ -376,12 +373,11 @@
                     </div>
                     <h3 class="testimonial-title">Everything simple</h3>
                     <p class="testimonial-text">
-                        Mus etiam et vestibulum venenatis viverra ut. Elit morbi bibendum ullamcorper augue faucibus
-                        Elit morbi bibendum ullamcorper augue faucibus. Nulla et tempor montes.
+                        The job search process was straightforward and efficient. I found several job opportunities that matched my skills.
                     </p>
                     <div class="testimonial-footer">
                         <img src="../img/smiling-young-pretty-caucasian-girl-isolated-purple-wall-with-copy-space.jpg"
-                            alt="Kristin Hester" class="avatar" loading="lazy">
+                            alt="Kristin Hester" class="avatar">
                         <div>
                             <p class="name">Kristin Hester</p>
                             <p class="role">Happy Client</p>
@@ -399,12 +395,11 @@
                     </div>
                     <h3 class="testimonial-title">Awesome, thank you!</h3>
                     <p class="testimonial-text">
-                        Rhoncus sed tristique in dolor. Mus etiam et vestibulum venenatis viverra ut. Elit morbi
-                        bibendum ullamcorper augue faucibus. Nulla et tempor montes.
+                        I am grateful for the excellent service provided by the job portal. It made my job search experience pleasant and successful.
                     </p>
                     <div class="testimonial-footer">
                         <img src="../img/outdoor-shot-young-caucasian-man-with-beard-relaxing-open-air-surrounded-by-beautiful-mountain-setting-rainforest.jpg"
-                            alt="Zion Cisneros" class="avatar" loading="lazy">
+                            alt="Zion Cisneros" class="avatar">
                         <div>
                             <p class="name">Zion Cisneros</p>
                             <p class="role">Happy Client</p>
@@ -415,18 +410,17 @@
         </div>
     </section>
 
-    <!-- Seccion Blog -->
-    <section class="blog-section ">
+    <!-- Sección de Blog -->
+    <section class="blog-section">
         <div class="container-blog">
             <div class="blog-header">
                 <h2 class="title-blog-section">News and Blog</h2>
                 <div class="header">
                     <p class="subtitle-blog-section">
-                        Metus faucibus sed turpis lectus feugiat tincidunt. Rhoncus sed tristique in dolor
+                        Stay updated with the latest news and insights from the job market.
                     </p>
                     <a id="view-blogs" href="#" class="view-all">View all</a>
                 </div>
-
             </div>
 
             <div class="blog-grid">
@@ -461,7 +455,6 @@
                             <a href="#">Read more </a>
                             <i class="fa-solid fa-arrow-right arrow-icon"></i>
                         </div>
-
                     </div>
                 </div>
 
@@ -494,19 +487,17 @@
 
             <!-- Sección de descripción -->
             <div class="footer-col footer-about">
-                <h1 class="footer-logo"><img src="../img/logos/jmj blanco.svg" alt=""></h1>
+                <h1 class="footer-logo"><img src="../img/logos/jmj blanco.svg" alt="JMJ LOGO"></h1>
                 <p class="footer-text">
-                    Quis enim pellentesque viverra tellus eget malesuada facilisis. Congue nibh vivamus aliquet nunc
-                    mauris d...
+                    Connecting talent with opportunity. Discover your next career move with us.
                 </p>
-
             </div>
 
             <!-- Sección de la empresa -->
             <div class="footer-col">
                 <h3 class="footer-title">Company</h3>
                 <ul class="footer-links">
-                    <li><a href="#">About Us</a></li>
+                    <li><a href="about.html">About Us</a></li>
                     <li><a href="#">Our Team</a></li>
                     <li><a href="#">Partners</a></li>
                     <li><a href="#">For Candidates</a></li>
@@ -530,7 +521,7 @@
             <div class="footer-col newsletter-section">
                 <h3 class="footer-title">Newsletter</h3>
                 <p class="footer-text">
-                    Eu nunc pretium vitae platea. Non netus elementum vulputate
+                    Stay updated with the latest job opportunities and career advice.
                 </p>
                 <form class="newsletter-form">
                     <input type="email" placeholder="Email Address" required>
