add content to sections

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -61,50 +61,50 @@
             <div class="contact-info">
                 <div class="info-text">
                     <h2 class="info-heading">
-                        You Will Grow, You Will Succeed. We Promise That
+                        Connecting Talent with Opportunity
                     </h2>
                     <p class="info-description">
-                        Pellentesque arcu facilisis nunc mi proin. Dignissim mattis in
-                        lectus tincidunt tincidunt ultrices. Diam convallis morbi
-                        pellentesque adipiscing
+                        At JMJ, we believe in helping professionals find their dream jobs and
+                        companies discover top talent. Our platform simplifies the hiring process,
+                        ensuring a seamless connection between candidates and employers.
                     </p>
                 </div>
                 <div class="contact-cards">
                     <div class="contact-card">
                         <img src="../img/icons/phone.svg" alt="Phone" class="card-icon" />
-                        <h3 class="card-title">Call for inquiry</h3>
-                        <p class="card-text">+257 388-6895</p>
+                        <h3 class="card-title">Call for Inquiry</h3>
+                        <p class="card-text">+1 (800) 123-4567</p>
                     </div>
                     <div class="contact-card">
                         <img src="../img/icons/mail.svg" alt="Email" class="card-icon" />
-                        <h3 class="card-title">Send us email</h3>
-                        <p class="card-text">kramulous@sbcglobal.net</p>
+                        <h3 class="card-title">Send us an Email</h3>
+                        <p class="card-text">support@jmjjobs.com</p>
                     </div>
                     <div class="contact-card">
                         <img src="../img/icons/clock.svg" alt="Clock" class="card-icon" />
-                        <h3 class="card-title">Opening hours</h3>
-                        <p class="card-text">Mon - Fri: 10AM - 10PM</p>
+                        <h3 class="card-title">Business Hours</h3>
+                        <p class="card-text">Mon - Fri: 9 AM - 6 PM</p>
                     </div>
                     <div class="contact-card">
                         <img src="../img/icons/location.svg" alt="Location" class="card-icon" />
-                        <h3 class="card-title">Office</h3>
-                        <p class="card-text">19 North Road Piscataway, NY 08854</p>
+                        <h3 class="card-title">Our Office</h3>
+                        <p class="card-text">123 Business Ave, New York, NY 10001</p>
                     </div>
                 </div>
             </div>
 
             <div class="contact-form-container">
                 <div class="form-header">
-                    <h2 class="form-title">Contact Info</h2>
+                    <h2 class="form-title">Get in Touch</h2>
                     <p class="form-subtitle">
-                        Nibh dis faucibus proin lacus tristique
+                        Have questions or need assistance? Fill out the form below, and we'll get back to you.
                     </p>
                 </div>
                 <form class="contact-form">
                     <div class="form-row">
                         <div class="form-group">
                             <label for="firstName" class="form-label">First Name</label>
-                            <input type="text" id="firstName" class="form-input" placeholder="Your name" />
+                            <input type="text" id="firstName" class="form-input" placeholder="Your first name" />
                         </div>
                         <div class="form-group">
                             <label for="lastName" class="form-label">Last Name</label>
@@ -113,105 +113,107 @@
                     </div>
                     <div class="form-group">
                         <label for="email" class="form-label">Email Address</label>
-                        <input type="email" id="email" class="form-input" placeholder="Your E-mail address" />
+                        <input type="email" id="email" class="form-input" placeholder="Your email address" />
                     </div>
                     <div class="form-group">
                         <label for="message" class="form-label">Message</label>
-                        <textarea id="message" class="form-textarea" placeholder="Your message..."></textarea>
+                        <textarea id="message" class="form-textarea" placeholder="How can we help you?"></textarea>
                     </div>
                     <button type="submit" class="submit-button">Send Message</button>
                 </form>
             </div>
         </section>
-    </main>
 
-    <!-- Map Section -->
-    <section class="map-section">
-        <div class="map-container">
-            <img src="../img/map.png" alt="Map" class="map-image" />
-            <img src="../img/icons/mappin.svg" alt="Location pin" class="map-pin" />
-        </div>
-    </section>
 
-    <!-- Partners Section -->
-    <section class="partners-section">
-        <div class="partners-container">
-            <div class="partners-logos">
-                <img src="../img/logos/zoom.png" alt="Zoom" class="partner-logo" />
-                <img src="../img/logos/tinder.png" alt="Tinder" class="partner-logo" />
-                <img src="../img/logos/dribbble.png" alt="dribbble" class="partner-logo" />
-                <img src="../img/logos/asana.png" alt="asana" class="partner-logo" />
+
+        <!-- Map Section -->
+        <section class="map-section">
+            <div class="map-container">
+                <img src="../img/map.png" alt="Map" class="map-image" />
+                <img src="../img/icons/mappin.svg" alt="Location pin" class="map-pin" />
             </div>
-        </div>
-    </section>
+        </section>
 
-    <!-- Footer -->
-    <footer class="footer">
-        <div class="container-footer">
-            <div class="footer-grid">
+        <!-- Partners Section -->
+        <section class="partners-section">
+            <div class="partners-container">
+                <div class="partners-logos">
+                    <img src="../img/logos/zoom.png" alt="Zoom" class="partner-logo" />
+                    <img src="../img/logos/tinder.png" alt="Tinder" class="partner-logo" />
+                    <img src="../img/logos/dribbble.png" alt="dribbble" class="partner-logo" />
+                    <img src="../img/logos/asana.png" alt="asana" class="partner-logo" />
+                </div>
+            </div>
+        </section>
 
-                <!-- Sección de descripción -->
-                <div class="footer-col footer-about">
-                    <h1 class="footer-logo">Job</h1>
-                    <p class="footer-text">
-                        Quis enim pellentesque viverra tellus eget malesuada facilisis. Congue nibh vivamus aliquet nunc
-                        mauris d...
+        <!-- Footer -->
+        <footer class="footer">
+            <div class="container-footer">
+                <div class="footer-grid">
+
+                    <!-- Sección de descripción -->
+                    <div class="footer-col footer-about">
+                        <h1 class="footer-logo">Job</h1>
+                        <p class="footer-text">
+                            Quis enim pellentesque viverra tellus eget malesuada facilisis. Congue nibh vivamus aliquet
+                            nunc
+                            mauris d...
+                        </p>
+
+                    </div>
+
+                    <!-- Sección de la empresa -->
+                    <div class="footer-col">
+                        <h3 class="footer-title">Company</h3>
+                        <ul class="footer-links">
+                            <li><a href="#">About Us</a></li>
+                            <li><a href="#">Our Team</a></li>
+                            <li><a href="#">Partners</a></li>
+                            <li><a href="#">For Candidates</a></li>
+                            <li><a href="#">For Employers</a></li>
+                        </ul>
+                    </div>
+
+                    <!-- Sección de categorías de trabajo -->
+                    <div class="footer-col">
+                        <h3 class="footer-title">Job Categories</h3>
+                        <ul class="footer-links">
+                            <li><a href="#categorie">Agriculture</a></li>
+                            <li><a href="#categorie">Hotels & Tourism</a></li>
+                            <li><a href="#categorie">Programming</a></li>
+                            <li><a href="#categorie">Education</a></li>
+                            <li><a href="#categorie">Financial Services</a></li>
+                        </ul>
+                    </div>
+
+                    <!-- Sección de newsletter -->
+                    <div class="footer-col newsletter-section">
+                        <h3 class="footer-title">Newsletter</h3>
+                        <p class="footer-text">
+                            Eu nunc pretium vitae platea. Non netus elementum vulputate
+                        </p>
+                        <form class="newsletter-form">
+                            <input type="email" placeholder="Email Address" required>
+                            <button type="submit">Subscribe now</button>
+                        </form>
+                    </div>
+
+                </div>
+
+                <!-- Políticas -->
+                <div class="footer-bottom">
+                    <p class="copyright">
+                        © Copyright Job Portal 2025. Designed by JMJ Jobs Team
                     </p>
+                    <div class="terms-btn">
+                        <a href="#">Privacy Policy</a>
+                        <a href="#">Terms & Conditions</a>
+                    </div>
 
-                </div>
-
-                <!-- Sección de la empresa -->
-                <div class="footer-col">
-                    <h3 class="footer-title">Company</h3>
-                    <ul class="footer-links">
-                        <li><a href="#">About Us</a></li>
-                        <li><a href="#">Our Team</a></li>
-                        <li><a href="#">Partners</a></li>
-                        <li><a href="#">For Candidates</a></li>
-                        <li><a href="#">For Employers</a></li>
-                    </ul>
-                </div>
-
-                <!-- Sección de categorías de trabajo -->
-                <div class="footer-col">
-                    <h3 class="footer-title">Job Categories</h3>
-                    <ul class="footer-links">
-                        <li><a href="#categorie">Agriculture</a></li>
-                        <li><a href="#categorie">Hotels & Tourism</a></li>
-                        <li><a href="#categorie">Programming</a></li>
-                        <li><a href="#categorie">Education</a></li>
-                        <li><a href="#categorie">Financial Services</a></li>
-                    </ul>
-                </div>
-
-                <!-- Sección de newsletter -->
-                <div class="footer-col newsletter-section">
-                    <h3 class="footer-title">Newsletter</h3>
-                    <p class="footer-text">
-                        Eu nunc pretium vitae platea. Non netus elementum vulputate
-                    </p>
-                    <form class="newsletter-form">
-                        <input type="email" placeholder="Email Address" required>
-                        <button type="submit">Subscribe now</button>
-                    </form>
                 </div>
 
             </div>
-
-            <!-- Políticas -->
-            <div class="footer-bottom">
-                <p class="copyright">
-                    © Copyright Job Portal 2025. Designed by JMJ Jobs Team
-                </p>
-                <div class="terms-btn">
-                    <a href="#">Privacy Policy</a>
-                    <a href="#">Terms & Conditions</a>
-                </div>
-
-            </div>
-
-        </div>
-    </footer>
+        </footer>
 </body>
 
 </html>
