--- a/pages/jobs.html
+++ b/pages/jobs.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
-
+    <link rel="icon" href="../img/logos/jmj blanco.svg" type="image/svg+xml">
     <!-- Estilos -->
     <link rel="stylesheet" href="../styles/Jobs/jobs__header.css">
     <link rel="stylesheet" href="../styles/Jobs/jobs__side-bar.css">
@@ -28,7 +28,7 @@
     <!-- Header -->
     <header class="header">
         <div class="container-header">
-            <h1 class="header__logo">Job Portal</h1>
+            <h1 class="header__logo"><img src="../img/logos/jmj blanco.svg" alt="JMJ LOGO"></h1>
             <nav>
                 <ul class="header_nav-list">
 
@@ -631,7 +631,7 @@
 
             <!-- Sección de descripción -->
             <div class="footer-col footer-about">
-                <h1 class="footer-logo">Job</h1>
+                <h1 class="footer-logo"><img src="../img/logos/jmj blanco.svg" alt="JMJ LOGO"></h1>
                 <p class="footer-text">
                     Quis enim pellentesque viverra tellus eget malesuada facilisis. Congue nibh vivamus aliquet nunc
                     mauris d...
